--- a/assets/scss/components/citadel/cards/_cards.scss
+++ b/assets/scss/components/citadel/cards/_cards.scss
@@ -35,7 +35,11 @@
 
         // scss-lint:disable NestingDepth
         .card-figcaption {
-            opacity: 1;
+            // opacity: 1;
+        }
+
+        .card-img-container img:last-of-type{
+            display: inline;
         }
     }
 
@@ -49,6 +53,12 @@
     max-width: get-width(stencilString('productgallery_size'));
 
     @include lazy-loaded-padding('productgallery_size');
+
+}
+
+.card-img-container img:last-of-type{
+    display: none;
+
 }
 
 .card-figcaption {
