--- a/templates/components/products/card.html
+++ b/templates/components/products/card.html
@@ -22,13 +22,20 @@
            {{#if settings.data_tag_enabled}} data-event-type="product-click" {{/if}}
         >
             <div class="card-img-container">
-                {{> components/common/responsive-img
-                    image=image
-                    class="card-image"
-                    fallback_size=theme_settings.productgallery_size
-                    lazyload=theme_settings.lazyload_mode
-                    default_image=theme_settings.default_image_product
-                }}
+
+
+                {{#each images}}
+
+                    {{> components/common/responsive-img
+                        image=this
+                        class="card-image"
+                        fallback_size=theme_settings.productgallery_size
+                        lazyload=theme_settings.lazyload_mode
+                        default_image=theme_settings.default_image_product
+                    }}
+
+                {{/each}}
+
             </div>
         </a>
 
